2025-11-11T12:31:38Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19265695462 # 1299
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-11
* notice: last 14d: unq all: 52 89
* notice: prev accum: outdated-unq outdated-all / unq all: 4964 9912 / 5024 10000
* notice: next accum: outdated-unq outdated-all / unq all: 4964 9912 / 5025 10001
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-11-11]

2025-11-11T01:12:30Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19251541390 # 1298
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-11
* notice: last 14d: unq all: 51 88
* notice: prev accum: outdated-unq outdated-all / unq all: 4956 9902 / 5023 9999
* notice: next accum: outdated-unq outdated-all / unq all: 4964 9912 / 5024 10000
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +10 +12 -0 -0 / 10 12
* notice: removed / changed dates: [2025-10-27] / [2025-11-10]

2025-11-10T12:31:48Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19231712869 # 1297
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-10
* notice: last 14d: unq all: 51 88
* notice: prev accum: outdated-unq outdated-all / unq all: 4956 9902 / 5014 9988
* notice: next accum: outdated-unq outdated-all / unq all: 4956 9902 / 5023 9999
* notice: prev exec diff / last date diff / accum: unq all: +9 +11 -7 -9 / +9 +11 -0 -0 / 9 11
* notice: removed / changed dates: [] / [2025-10-27 2025-11-10]

2025-11-10T01:14:41Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19217569340 # 1296