@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-11-11T12:31:38Z",
-  "count" : 1,
-  "count_minmax" : [ 1, 1 ],
-  "count_decinc" : [ -0, +1 ],
-  "uniques" : 1,
-  "uniques_minmax" : [ 1, 1 ],
-  "uniques_decinc" : [ -0, +1 ]
+  "timestamp" : "2025-11-12T01:12:08Z",
+  "count" : 20,
+  "count_minmax" : [ 1, 20 ],
+  "count_decinc" : [ -0, +20 ],
+  "uniques" : 14,
+  "uniques_minmax" : [ 1, 14 ],
+  "uniques_decinc" : [ -0, +14 ]
 }
