@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-11-11T12:31:38Z",
+  "timestamp" : "2025-11-12T01:12:08Z",
   "count_outdated" : 9912,
   "uniques_outdated" : 4964,
-  "count" : 10001,
-  "uniques" : 5025,
+  "count" : 10020,
+  "uniques" : 5038,
   "clones" : [
     {
       "timestamp": "2025-10-29T00:00:00Z",
@@ -124,12 +124,12 @@
     },
     {
       "timestamp": "2025-11-11T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 20,
+      "count_minmax": [ 1, 20 ],
+      "count_decinc": [ 0, 20 ],
+      "uniques": 14,
+      "uniques_minmax": [ 1, 14 ],
+      "uniques_decinc": [ 0, 14 ]
     }
   ]
 }
