@@ -1,6 +1,6 @@
 {
-  "count": 89,
-  "uniques": 52,
+  "count": 108,
+  "uniques": 62,
   "clones": [
     {
       "timestamp": "2025-10-29T00:00:00Z",
@@ -69,8 +69,8 @@
     },
     {
       "timestamp": "2025-11-11T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 20,
+      "uniques": 14
     }
   ]
 }
