@@ -1,3 +1,12 @@
+2025-11-12T01:12:08Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19283122903 # 1300
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-12
+* notice: last 14d: unq all: 62 108
+* notice: prev accum: outdated-unq outdated-all / unq all: 4964 9912 / 5025 10001
+* notice: next accum: outdated-unq outdated-all / unq all: 4964 9912 / 5038 10020
+* notice: prev exec diff / last date diff / accum: unq all: +13 +19 -0 -0 / +14 +20 -0 -0 / 14 20
+* notice: removed / changed dates: [] / [2025-11-11]
+
 2025-11-11T12:31:38Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19265695462 # 1299
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-11
